optimize this object
1.add verifing system version 1.0,program only in javaSE.
2.optimize this verify system,add some new ceatures.

--- a/license/src/main/webapp/css/showallcodes.css
+++ b/license/src/main/webapp/css/showallcodes.css
@@ -1,5 +1,6 @@
 
 table.gridtable {
+	width: 97%;
 	font-family: verdana,arial,sans-serif;
 	font-size:11px;
 	color:#333333;
@@ -19,6 +20,5 @@ table.gridtable td {
 	padding: 8px;
 	border-style: solid;
 	border-color: #666666;
-	background-color: #ffffff;
 }
 
